--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -110,8 +110,11 @@
 
 
 <div class="container">
-    <h2 class="mb-2">Chiles Transformation Amidst Crisis: The Theseus Paradox</h2>
-  <p class="text-muted">Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.</p>
+
+    <div style="display:inline-block;"><br><br>
+      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+      <p class="text-muted">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
+    </div>
 
 
 <hr>
@@ -121,12 +124,13 @@
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#content">Book</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
     </div>
   </div>
 </div>
