--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -117,12 +117,10 @@
     </div>
 
 
-<hr>
-
 <!-- Resources jump bar -->
 <div class="container">
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
-    <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
+    <div class="mr-2"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#content">Book</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
@@ -135,7 +133,6 @@
   </div>
 </div>
 
-<hr>
 
   <h3 class="mb-2">Literature, Documents and References</h2>
   <p class="text-muted">Direct-download PDFs, academic literature, and web references by chapter.</p>
