--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -117,7 +117,7 @@
 
 <!-- Resources jump bar -->
 <div class="container">
-  <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
+  <div class="alert alert-light border jumpbar">
     <div class="mr-2"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#content">Book</a>
