--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -108,53 +108,44 @@
 </div>
 <hr>
 
+<!-- Page intro -->
+<div class="resource-header">
+  <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+  <p class="resource-sub">Supplemental material for the book, including data, code, and references.</p>
+</div>
 
-<div class="container">
-
-      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-      <p class="text-muted">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
-
-
-<!-- Resources jump bar -->
-<div class="container">
-  <div class="alert alert-light border jumpbar">
-    <div class="mr-2"><strong>Resources:</strong></div>
-    <div class="d-flex flex-wrap">
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#content">Book</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
-    </div>
+<!-- Resources box -->
+<div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
+  <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
+  <div class="d-flex flex-wrap">
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/">Book</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
   </div>
 </div>
 
-
-  <h3 class="mb-2">Literature, Documents and References</h2>
-  <p class="text-muted">Direct-download PDFs, academic literature, and web references by chapter.</p>
-
-
-  <div class="alert alert-light border jumpbar">
-    <strong class="mr-2">Jump to chapter:</strong>
-    <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
-  </div>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <strong class="mr-2">Jump to chapter:</strong>
+  <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
 </div>
 
 <!-- CH 2 -->
