--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -86,39 +86,35 @@
 </div>
 <hr>
 
-<!-- Resources jump bar -->
-<div class="container">
-  <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
-    <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
-    <div class="d-flex flex-wrap">
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
-    </div>
+<!-- Page intro -->
+<div class="resource-header">
+  <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+  <p class="resource-sub">Image gallery by chapter — thumbnails related to the book. Click any image to view full size.</p>
+</div>
+
+<!-- Resources box -->
+<div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
+  <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
+  <div class="d-flex flex-wrap">
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/">Book</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+    <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
   </div>
 </div>
 
-<hr>
-
-<div class="container">
-     <div style="display:inline-block;"><br><br>
-      <strong>Image Gallery by Chapter</strong> <br><br> Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.
-    </div>
-
-
-  <!-- Jump bar styled like "files" -->
-  <div class="alert alert-light border jumpbar">
-    <strong class="mr-2">Jump to chapter:</strong>
-    <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
-  </div>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <strong class="mr-2">Jump to chapter:</strong>
+  <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
 </div>
+
 
 <div class="container">
   <!-- Chapter 9 -->
