--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -112,7 +112,7 @@
 <div class="container">
   <div class="resource-header">
     <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="resource-sub">Supplemental material for the book, including data, code, and references.</p>
+    <p class="resource-sub">Documents, literature and references.</p>
   </div>
 
   <!-- Resources box -->
