--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -90,7 +90,7 @@
 <div class="container">
   <div class="resource-header">
     <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="resource-sub">Image gallery by chapter — thumbnails related to the book. Click any image to view full size.</p>
+    <p class="resource-sub">Click any image to view full size.</p>
   </div>
 
   <!-- Resources box -->
