--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -87,11 +87,10 @@
 <hr>
 
 <!-- Top section: title → description → resources → jump-to -->
-<div class="container">
-  <div class="resource-header">
-    <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="resource-sub">Click any image to view full size.</p>
-  </div>
+    <div style="display:inline-block;"><br><br>
+      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+      <p class="text-muted">Click any image to view full size.</p>
+    </div>
 
   <!-- Resources box -->
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
