--- a/theseus/index.html
+++ b/theseus/index.html
@@ -99,12 +99,15 @@
 <div id="content">
   <div class="container">
 
-    <!-- Top section: title → description → resources → jump-to -->
-<div class="container">
-  <div class="resource-header">
-    <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="text-muted">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references..</p>
-  </div>
+    
+    <div style="display:inline-block;"><br><br>
+
+      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+      <p class="text-muted">Welcome to the author's website of Chile's Transformation Amidst Crisis: The Theseus Paradox. Here you can find supplemental material, such as data, code, and references.</p>
+
+    </div>
+
+
 
     <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
       <p style="margin: 0;">
