--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -86,22 +86,24 @@
 </div>
 <hr>
 
-<!-- Top section: title → description → resources → jump-to -->
-    <div style="display:inline-block;"><br><br>
-      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-      <p class="text-muted">Click any image to view full size.</p>
-    </div>
+<a id="top"></a>
+<div class="container">
+  <!-- Top section: title → description -->
+  <div style="display:inline-block;"><br><br>
+    <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+    <p class="text-muted">Image gallery by chapter. Click any image to view full size.</p>
+  </div>
 
-  <!-- Resources box -->
+  <!-- Resources box (real links) -->
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/">Book</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://dataverse.harvard.edu/dataverse/theseus" target="_blank" rel="noopener noreferrer">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Code</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
     </div>
   </div>
 
