--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -108,12 +108,18 @@
 </div>
 <hr>
 
-<!-- Top section: title → description → resources → jump-to -->
+<a id="top"></a>
 <div class="container">
-  <div class="resource-header">
-    <h2 class="resource-title">Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="resource-sub">Documents, literature and references.</p>
+
+  <div style="display:inline-block;"><br><br>
+    <h2 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">
+      Chile's Transformation Amidst Crisis: The Theseus Paradox
+    </h2>
+    <p class="text-muted" style="font-size:1rem;">
+      Documents, literature and references.
+    </p>
   </div>
+
 
   <!-- Resources box -->
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
