--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -88,12 +88,17 @@
 
 <a id="top"></a>
 <div class="container">
-  <!-- Top section: title → description -->
+
   <div style="display:inline-block;"><br><br>
-    <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
-    <p class="text-muted">Image gallery by chapter. Click any image to view full size.</p>
+    <h2 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">
+      Chile's Transformation Amidst Crisis: The Theseus Paradox
+    </h2>
+    <p class="text-muted" style="font-size:1rem;">
+      Image gallery by chapter. Click any image to view full size.
+    </p>
   </div>
 
+  
   <!-- Resources box (real links) -->
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
