--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -109,13 +109,14 @@
 <hr>
 
 <a id="top"></a>
-<div class="container">
+<div id="content">
+  <div class="container">
 
   <div style="display:inline-block;"><br><br>
-    <h2 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">
+<h2>
       Chile's Transformation Amidst Crisis: The Theseus Paradox
     </h2>
-    <p class="text-muted" style="font-size:1rem;">
+<p class="text-muted">
       Documents, literature and references.
     </p>
   </div>
