--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -87,18 +87,19 @@
 <hr>
 
 <a id="top"></a>
-<div class="container">
+<div id="content">
+  <div class="container">
 
   <div style="display:inline-block;"><br><br>
-    <h2 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">
+<h2>
       Chile's Transformation Amidst Crisis: The Theseus Paradox
     </h2>
-    <p class="text-muted" style="font-size:1rem;">
+<p class="text-muted">
       Image gallery by chapter. Click any image to view full size.
     </p>
   </div>
 
-  
+
   <!-- Resources box (real links) -->
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
