--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -219,14 +219,77 @@
     </div>
   </section>
 
+
   <!-- Chapter 14 -->
   <section id="ch14" class="chapter-anchor">
     <h2 class="h5 chapter-header">Chapter 14 — Constitutional resurrection</h2>
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="14.1. Depolo.jpeg" target="_blank">
-            <img src="14.1. Depolo.jpeg" class="thumb" alt="Depolo">
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 1<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+      <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 1<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+      <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 2<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 3<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 4<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          </a>
+          <figcaption>Acuerdo por Chile 5<br><small><em>(BCN)</em></small></figcaption>
+        </figure>
+      </div>
+    </div>
+
+  </section>
+
+
+  <!-- Chapter 15 -->
+  <section id="ch15" class="chapter-anchor">
+    <h2 class="h5 chapter-header">Chapter 15 — Constitutional resurrection</h2>
+    <div class="row">
+      <div class="col-sm-6 col-md-4 mb-4">
+        <figure>
+          <a href="15.1. Depolo.jpeg" target="_blank">
+            <img src="15.1. Depolo.jpeg" class="thumb" alt="Depolo">
           </a>
           <figcaption>Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
         </figure>
