--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -244,8 +244,8 @@
     </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
-            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          <a href="15. Acuerdo por Chile 2.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 2.jpeg" class="thumb" alt="APCH">
           </a>
           <figcaption>Acuerdo por Chile 2<br><small><em>(BCN)</em></small></figcaption>
         </figure>
@@ -253,8 +253,8 @@
     </div>
         <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
-            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          <a href="15. Acuerdo por Chile 3.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 3.jpeg" class="thumb" alt="APCH">
           </a>
           <figcaption>Acuerdo por Chile 3<br><small><em>(BCN)</em></small></figcaption>
         </figure>
@@ -262,8 +262,8 @@
     </div>
           <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
-            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          <a href="15. Acuerdo por Chile 4.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 4.jpeg" class="thumb" alt="APCH">
           </a>
           <figcaption>Acuerdo por Chile 4<br><small><em>(BCN)</em></small></figcaption>
         </figure>
@@ -271,8 +271,8 @@
     </div>
           <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
-            <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="APCH">
+          <a href="15. Acuerdo por Chile 5.jpeg" target="_blank">
+            <img src="15. Acuerdo por Chile 5.jpeg" class="thumb" alt="APCH">
           </a>
           <figcaption>Acuerdo por Chile 5<br><small><em>(BCN)</em></small></figcaption>
         </figure>
@@ -303,8 +303,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="16.1. - Consejo Constitucional Expertos.jpeg" target="_blank">
-            <img src="16.1. - Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
+          <a href="16.1. Consejo Constitucional Expertos.jpeg" target="_blank">
+            <img src="16.1. Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
           </a>
           <figcaption>Consejo Constitucional Expertos<br><small><em>(La Tercera)</em></small></figcaption>
         </figure>
