--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -212,6 +212,23 @@
           </figure>
         </div>
       </div>
+            <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="12. Pelado Vade.jpeg" target="_blank">
+              <img src="12. Pelado Vade.jpeg" class="thumb" alt="La mesa (Ch.12)">
+            </a>
+            <figcaption>Rodrigo Rojas Vade<br><small><em>(Instagram / @pelaovade)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="12.4. Dinosours.jpeg" target="_blank">
+              <img src="12.4. Dinosours.jpeg" class="thumb" alt="Dinosours">
+            </a>
+            <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
 
     <!-- Chapter 14 -->
