--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -211,13 +211,12 @@
             <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
           </figure>
         </div>
-      </div>
-            <div class="col-sm-6 col-md-4 mb-4">
+      <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="12. Pelado Vade.jpeg" target="_blank">
-              <img src="12. Pelado Vade.jpeg" class="thumb" alt="La mesa (Ch.12)">
+            <a href="12.3. La mesa.jpeg" target="_blank">
+              <img src="12.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.12)">
             </a>
-            <figcaption>Rodrigo Rojas Vade<br><small><em>(Instagram / @pelaovade)</em></small></figcaption>
+            <figcaption>La mesa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -230,6 +229,12 @@
         </div>
       </div>
     </section>
+
+
+
+12. Pelado Vade.jpeg
+
+
 
     <!-- Chapter 14 -->
     <section id="ch14" class="chapter-anchor">
