--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -221,19 +221,14 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="12.4. Dinosours.jpeg" target="_blank">
-              <img src="12.4. Dinosours.jpeg" class="thumb" alt="Dinosours">
+            <a href="12. Pelado Vade.jpeg" target="_blank">
+              <img src="12. Pelado Vade.jpeg" class="thumb" alt="Dinosours">
             </a>
-            <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
+            <figcaption>Dinosours<br><small><em>(Instagram / @peladovade)</em></small></figcaption>
           </figure>
         </div>
       </div>
     </section>
-
-
-
-12. Pelado Vade.jpeg
-
 
 
     <!-- Chapter 14 -->
