--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -222,9 +222,9 @@
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="12. Pelado Vade.jpeg" target="_blank">
-              <img src="12. Pelado Vade.jpeg" class="thumb" alt="Dinosours">
+              <img src="12. Pelado Vade.jpeg" class="thumb" alt="PeladoVade">
             </a>
-            <figcaption>Dinosours<br><small><em>(Instagram / @peladovade)</em></small></figcaption>
+            <figcaption>Rodrigo Rojas Vade<br><small><em>(Instagram / @peladovade)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -237,40 +237,40 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Acuerdo por Chile 1.jpeg" target="_blank">
-              <img src="15. Acuerdo por Chile 1.jpeg" class="thumb" alt="Acuerdo por Chile 1">
+            <a href="14. Acuerdo por Chile 1.jpeg" target="_blank">
+              <img src="14. Acuerdo por Chile 1.jpeg" class="thumb" alt="Acuerdo por Chile 1">
             </a>
             <figcaption>Acuerdo por Chile 1<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Acuerdo por Chile 2.jpeg" target="_blank">
-              <img src="15. Acuerdo por Chile 2.jpeg" class="thumb" alt="Acuerdo por Chile 2">
+            <a href="14. Acuerdo por Chile 2.jpeg" target="_blank">
+              <img src="14. Acuerdo por Chile 2.jpeg" class="thumb" alt="Acuerdo por Chile 2">
             </a>
             <figcaption>Acuerdo por Chile 2<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Acuerdo por Chile 3.jpeg" target="_blank">
-              <img src="15. Acuerdo por Chile 3.jpeg" class="thumb" alt="Acuerdo por Chile 3">
+            <a href="14. Acuerdo por Chile 3.jpeg" target="_blank">
+              <img src="14. Acuerdo por Chile 3.jpeg" class="thumb" alt="Acuerdo por Chile 3">
             </a>
             <figcaption>Acuerdo por Chile 3<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Acuerdo por Chile 4.jpeg" target="_blank">
-              <img src="15. Acuerdo por Chile 4.jpeg" class="thumb" alt="Acuerdo por Chile 4">
+            <a href="14. Acuerdo por Chile 4.jpeg" target="_blank">
+              <img src="14. Acuerdo por Chile 4.jpeg" class="thumb" alt="Acuerdo por Chile 4">
             </a>
             <figcaption>Acuerdo por Chile 4<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Acuerdo por Chile 5.jpeg" target="_blank">
-              <img src="15. Acuerdo por Chile 5.jpeg" class="thumb" alt="Acuerdo por Chile 5">
+            <a href="14. Acuerdo por Chile 5.jpeg" target="_blank">
+              <img src="14. Acuerdo por Chile 5.jpeg" class="thumb" alt="Acuerdo por Chile 5">
             </a>
             <figcaption>Acuerdo por Chile 5<br><small><em>(BCN)</em></small></figcaption>
           </figure>
