--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -120,7 +120,22 @@
     </div>
   </div>
 
-  <div class="container">
+   <div class="container">
+    <!-- Chapter 5 -->
+    <section id="ch5" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 5 — The Paradox of Progress</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
+              <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
+            </a>
+            <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
+          </figure>
+        </div>
+    </section>
+
+   <div class="container">
     <!-- Chapter 9 -->
     <section id="ch9" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 9 — October 18, 2019</h2>
