--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -306,6 +306,15 @@
           </figure>
         </div>
       </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Hambre.jpeg" target="_blank">
+              <img src="15. Hambre.jpeg" class="thumb" alt="Depolo">
+            </a>
+            <figcaption>Hambre<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
 
     <!-- Chapter 16 -->
