--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -242,7 +242,15 @@
             <figcaption>Rodrigo Rojas Vade<br><small><em>(Instagram / @peladovade)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="12. Saumerio.jpeg" target="_blank">
+              <img src="12. Saumerio.jpeg" class="thumb" alt="Saumerio">
+            </a>
+            <figcaption>Saumerio<br><small><em>(CNN Chile)</em></small></figcaption>
+          </figure>
+        </div>
+    </div>
     </section>
 
 
