--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -982,7 +982,7 @@
 
 <!-- CH 9 -->
 <section id="ch9" class="section-box">
-  <div class="section-title">CHAPTER 9 – From fare hikes to the social outbreak</div>
+  <div class="section-title">CHAPTER 9 – October 18, 2019</div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1071,7 +1071,7 @@
 
 <!-- CH 10 -->
 <section id="ch10" class="section-box">
-  <div class="section-title"><strong>CHAPTER 10 – From unrest to a constitutional path</strong></div>
+  <div class="section-title"><strong>CHAPTER 10 – The Constitutional Design</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1163,7 +1163,7 @@
 
 <!-- CH 11 -->
 <section id="ch11" class="section-box">
-  <div class="section-title"><strong>CHAPTER 11 – The 2021–2022 election cycle and new leadership</strong></div>
+  <div class="section-title"><strong>CHAPTER 11 – The rise of Gabriel Boric</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1323,7 +1323,7 @@
 
 <!-- CH 13 -->
 <section id="ch13" class="section-box">
-  <div class="section-title"><strong>CHAPTER 13 – Why the 2022 draft failed</strong></div>
+  <div class="section-title"><strong>CHAPTER 13 – Understanding Rejection: Why the First Constitutional Process Failed</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1369,7 +1369,7 @@
 
 <!-- CH 14 -->
 <section id="ch14" class="section-box">
-  <div class="section-title"><strong>CHAPTER 14 – Resetting the process (2022–2023)</strong></div>
+  <div class="section-title"><strong>CHAPTER 14 – Constitutional Resurrection</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1407,7 +1407,7 @@
 
 <!-- CH 15 -->
 <section id="ch15" class="section-box">
-  <div class="section-title"><strong>CHAPTER 15 – Crime, pensions, and the politics of order</strong></div>
+  <div class="section-title"><strong>CHAPTER 15 – From Instability to Realignment</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1499,7 +1499,7 @@
 
 <!-- CH 16 -->
 <section id="ch16" class="section-box">
-  <div class="section-title"><strong>CHAPTER 16 – The 2023 Constitutional Council</strong></div>
+  <div class="section-title"><strong>CHAPTER 16 – The (Second) Constitutional Council</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
@@ -1555,7 +1555,7 @@
 
 <!-- CH 17 -->
 <section id="ch17" class="section-box">
-  <div class="section-title"><strong>CHAPTER 17 – Why the 2023 draft failed</strong></div>
+  <div class="section-title"><strong>CHAPTER 17 – Coming to Terms: Why the Second Constitutional Process Failed</strong></div>
   <div class="inner mt-3">
 
     <div class="subhead"><strong>Documents</strong></div>
