--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -303,7 +303,7 @@
 
     <!-- Chapter 15 -->
     <section id="ch15" class="chapter-anchor">
-      <h2 class="h5 chapter-header">Chapter 15 — Constitutional resurrection</h2>
+      <h2 class="h5 chapter-header">Chapter 15 — From Instability to Realignment</h2>
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
