--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -322,6 +322,15 @@
           </figure>
         </div>
       </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Perro Matapacos.jpeg" target="_blank">
+              <img src="15. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
+            </a>
+            <figcaption>Perro<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
 
     <!-- Chapter 16 -->
