--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -168,7 +168,7 @@
             <a href="10.1.1. The agreement 1.jpeg" target="_blank">
               <img src="10.1.1. The agreement 1.jpeg" class="thumb" alt="The agreement 1">
             </a>
-            <figcaption>The agreement 1<br><small><em>(BCN)</em></small></figcaption>
+            <figcaption>Acuerdo por la Paz Social y Nueva Constitución 1<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -176,7 +176,7 @@
             <a href="10.1.2. The agreement 2 .jpeg" target="_blank">
               <img src="10.1.2. The agreement 2 .jpeg" class="thumb" alt="The agreement 2">
             </a>
-            <figcaption>The agreement 2<br><small><em>(BCN)</em></small></figcaption>
+            <figcaption>Acuerdo por la Paz Social y Nueva Constitución 2<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
