--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -330,6 +330,7 @@
             <figcaption>Perro<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
+    </div>
     </section>
 
     <!-- Chapter 16 -->
