--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -133,6 +133,7 @@
             <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
+      </div>
     </section>
 
    <div class="container">
