--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -121,6 +121,23 @@
   </div>
 
    <div class="container">
+    <!-- Chapter 4 -->
+    <section id="ch4" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 4 — Two decades of stability</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="4. Constitución Lagos.jpeg" target="_blank">
+              <img src="4. Constitución Lagos.jpeg" class="thumb" alt="No estamos en guerra">
+            </a>
+            <figcaption>Constitución<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+
+<div class="container">
     <!-- Chapter 5 -->
     <section id="ch5" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 5 — The Paradox of Progress</h2>
