--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -111,6 +111,9 @@
     <!-- Jump to chapters -->
     <div class="alert alert-light border jumpbar" id="chapters">
       <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
@@ -120,6 +123,25 @@
     </div>
   </div>
 
+
+
+   <div class="container">
+    <!-- Chapter 2 -->
+    <section id="ch2" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 2 - The 1980 Constitution</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="2. Chicago Boys.jpeg" target="_blank">
+              <img src="2. Chicago Boys.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Chicago Boys<br><small><em>(Marxsur)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+
    <div class="container">
     <!-- Chapter 4 -->
     <section id="ch4" class="chapter-anchor">
@@ -128,7 +150,7 @@
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="4. Constitución Lagos.jpeg" target="_blank">
-              <img src="4. Constitución Lagos.jpeg" class="thumb" alt="No estamos en guerra">
+              <img src="4. Constitución Lagos.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Constitución<br><small><em>(BCN)</em></small></figcaption>
           </figure>
