--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -197,7 +197,16 @@
           </figure>
         </div>
       </div>
-    </section>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Iglesia" target="_blank">
+              <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
+            </a>
+            <figcaption>Iglesia<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+</section>
 
     <!-- Chapter 10 -->
     <section id="ch10" class="chapter-anchor">
