--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -275,14 +275,6 @@
             <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
           </figure>
         </div>
-      <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
-            <a href="12.3. La mesa.jpeg" target="_blank">
-              <img src="12.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.12)">
-            </a>
-            <figcaption>La mesa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
-          </figure>
-        </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="12. Pelado Vade.jpeg" target="_blank">
@@ -376,7 +368,7 @@
             <a href="15. Perro Matapacos.jpeg" target="_blank">
               <img src="15. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
             </a>
-            <figcaption>Perro<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
+            <figcaption>Perro Matapacos<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
     </div>
