--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -232,7 +232,8 @@
             <figcaption>The announcement<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
           </figure>
         </div>
-    </section>
+          </div>
+           </section>
 
     <!-- Chapter 12 -->
     <section id="ch12" class="chapter-anchor">
