--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -287,7 +287,8 @@
             <figcaption>Saumerio<br><small><em>(CNN Chile)</em></small></figcaption>
           </figure>
         </div>
-    </section>
+           </div>
+         </section>
 
 
     <!-- Chapter 14 -->
