--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -334,7 +334,15 @@
             <figcaption>Acuerdo por Chile 5<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
-    </section>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="14. The announcment.png" target="_blank">
+              <img src="14. The announcment.png" class="thumb" alt="14. The announcement">
+            </a>
+            <figcaption>The announcement<br><small><em>(Reuters)</em></small></figcaption>
+          </figure>
+        </div>
+  </section>
 
     <!-- Chapter 15 -->
     <section id="ch15" class="chapter-anchor">
