--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -336,8 +336,8 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="14. The announcment.png" target="_blank">
-              <img src="14. The announcment.png" class="thumb" alt="14. The announcement">
+            <a href="14. The announcement.jpeg" target="_blank">
+              <img src="14. The announcement.jpeg" class="thumb" alt="14. The announcement">
             </a>
             <figcaption>The announcement<br><small><em>(Reuters)</em></small></figcaption>
           </figure>
