--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -166,7 +166,7 @@
             <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
               <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
-            <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
+            <figcaption>Chile será la tumba del neoliberalismo<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
       </div>
