--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -410,7 +410,15 @@
             <figcaption>Consejo Constitucional pleno<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
         </div>
-    </section>
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="16. Comité Técnico de Admisibilidad.jpeg" target="_blank">
+              <img src="16. Comité Técnico de Admisibilidad.jpeg" class="thumb" alt="Consejo Constitucional pleno">
+            </a>
+            <figcaption>Comité Técnico de Admisibilidad<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
+          </figure>
+        </div>
+</section>
 
     <hr>
     <div class="text-center my-4">
