--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -380,8 +380,8 @@
       <div class="row">
          <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="16. Comité Técnico de Admisibilidad.jpeg" target="_blank">
-              <img src="16. Comité Técnico de Admisibilidad.jpeg" class="thumb" alt="Consejo Constitucional pleno">
+            <a href="16. Comite Tecnico de Admisibilidad.jpeg" target="_blank">
+              <img src="16. Comite Tecnico de Admisibilidad.jpeg" class="thumb" alt="Consejo Constitucional pleno">
             </a>
             <figcaption>Comité Técnico de Admisibilidad<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
